--- a/backend/tos-proejct/build.gradle
+++ b/backend/tos-proejct/build.gradle
@@ -29,8 +29,8 @@ dependencies {
 	implementation('org.slf4j:jcl-over-slf4j')
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.security:spring-security-test'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
+	//implementation 'org.springframework.security:spring-security-test'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
