--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "next": "^12.0.10",
     "next-auth": "^4.2.1",
     "react": "17.0.2",
@@ -15,6 +16,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.20.0",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10"
   }
