--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,15 +6,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+    
   },
   "dependencies": {
-    "next": "^12.0.10",
-    "react": "17.0.2",
+    "axios": "^0.26.0",
+    "next": "^12.1.0",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
+    
   },
   "devDependencies": {
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10"
+    
   }
+  
 }
