--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "http-proxy-middleware": "^2.0.3",
     "next": "^12.0.10",
     "next-auth": "^4.2.1",
     "react": "17.0.2",
