--- a/backend/tos-proejct/src/main/resources/application.yml
+++ b/backend/tos-proejct/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       use-new-id-generator-mappings: false
