회원 이미지 첨부 기능 구현 #1

--- a/backend/tos-proejct/src/main/resources/application.yml
+++ b/backend/tos-proejct/src/main/resources/application.yml
@@ -41,8 +41,8 @@ spring:
 
   # 파일 경로 설정
   file:
-    path:
-      profileImg: 'C:\'
+    upload:
+      location: 'C:\files'
 
   # multipart 설정
 
