--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3"
   },
