--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "next-auth": "^4.2.1",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
