--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.0",
     "http-proxy-middleware": "^2.0.3",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "next": "^12.0.10",
     "next-auth": "^4.2.1",
     "next-redux-wrapper": "^7.0.5",
