Feature : OAuth2 인증 기능 구현
- OAuth2 인증 요청처리 구현 (kakao)
- Jwt 토큰 생성 및 발행기능 수정
- 의존성 정리작업 (정렬 및 주석 추가)

--- a/backend/tos-proejct/src/main/resources/application.yml
+++ b/backend/tos-proejct/src/main/resources/application.yml
@@ -1,48 +1,34 @@
-server:
-  servlet:
-    context-path: /
-    session:
-      timeout: 30m
-      tracking-modes: cookie
-  encoding:
-    charset: UTF-8
-    enabled: true
-
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/together_sports_db?serverTimezone=UTC&characterEncoding=UTF-8
-    username: root
-    password: 1234
-
-  http:
-    encoding:
-      charset:
-        utf-8 force: true
-
-  jwt:
-    secret: abcabc
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:test;
+    username: sa
+    password:
 
   jpa:
-    open-in-view: true
+    generate-ddl: true
     hibernate:
       ddl-auto: create
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      use-new-id-generator-mappings: false
-    show-sql: true
-    properties:
-      hibernate.format_sql: true
 
-  # Thymeleaf 설정
-  thymeleaf:
-    cache: false #template 수정 시 자동 프로젝트 재시작해주어 Test 수행 시 용이하다. (운영 시 true)
-    prefix: file:src/main/resources/templates/
+  profiles:
+    include: oauth2, jwt
 
-  # 파일 경로 설정
-  file:
-    upload:
-      location: 'C:\files'
+# aws properties
+---
+spring:
+  profiles:
+    active: deployment
 
-  # multipart 설정
+
+
+
+
+
+
+
+
+
+
+
+
 
