--- a/backend/tos-proejct/build.gradle
+++ b/backend/tos-proejct/build.gradle
@@ -19,22 +19,30 @@ repositories {
 }
 
 dependencies {
-	//Spring
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	// spring dependencies
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
+	// lombok & jdbc driver
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'mysql:mysql-connector-java'
+	runtimeOnly 'com.h2database:h2' // 개발용
+	runtimeOnly 'mysql:mysql-connector-java' // 배포용
 	annotationProcessor 'org.projectlombok:lombok'
 
-	//Util
+	// utility
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
-	//Test
+	//  jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
