Feature : JWT 인증 기능 구현
- JWT 디코드 기능 구현, 디코드 실패 시 예외 발생
- 토큰 예외 상황에 따른 응답 구현 (failure handling)

--- a/backend/tos-proejct/src/main/resources/application.yml
+++ b/backend/tos-proejct/src/main/resources/application.yml
@@ -13,7 +13,14 @@ spring:
   profiles:
     include: oauth2, jwt
 
+server:
+  servlet:
+    encoding:
+      charset: UTF-8
+      force: true
+
 # aws properties
+
 ---
 spring:
   profiles:
