--- a/backend/tos-proejct/src/main/resources/application-jwt.yml
+++ b/backend/tos-proejct/src/main/resources/application-jwt.yml
@@ -1,5 +1,6 @@
 jwt:
   issuer: together-sports
-  signing-key: kGO2WGNVgLVHVhz5M1Y8nQuT7mH69JHlGqSk5X9Qi7M=
+  access-token-signing-key: kGO2WGNVgLVHVhz5M1Y8nQuT7mH69JHlGqSk5X9Qi7M=
+  refresh-token-signing-key : kGO2WGNVgLVHVhz5M1Y8nQuT7mH69JHlGqSk5X9Qi7M!
   access-token-expiration-time: 30 # 분단위
   refresh-token-expiration-time: 15 # 일단위
