--- a/backend/tos-proejct/src/main/resources/application.yml
+++ b/backend/tos-proejct/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+
+  h2:
+    console.enabled: true
+
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:test;
@@ -11,7 +15,7 @@ spring:
       ddl-auto: create
 
   profiles:
-    include: oauth2, jwt
+    include: oauth2, jwt, storage
 
 server:
   servlet:
