--- a/backend/tos-proejct/build.gradle
+++ b/backend/tos-proejct/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 
 	// utility
-	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+	implementation 'org.modelmapper:modelmapper:3.0.0'
 
 	//  jwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
