Feature : 기타 로직 수정

--- a/backend/tos-proejct/src/main/resources/application-oauth2.yml
+++ b/backend/tos-proejct/src/main/resources/application-oauth2.yml
@@ -42,4 +42,4 @@ spring:
 
 app:
   oauth2:
-    authorized-redirect-uri: http://localhost:3000/auth/saving
+    authorized-redirect-uri: http://localhost:3000/oauth/saving
