Feature : 도메인 별 접근 권한 설정 적용
- spring security acl 적용

--- a/backend/tos-proejct/build.gradle
+++ b/backend/tos-proejct/build.gradle
@@ -24,6 +24,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.security:spring-security-acl'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
