--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stomp/stompjs": "^6.1.2",
     "axios": "^0.26.0",
     "http-proxy-middleware": "^2.0.3",
     "jquery": "^3.6.0",
