--- a/backend/tos-proejct/src/main/resources/application.yml
+++ b/backend/tos-proejct/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       use-new-id-generator-mappings: false
@@ -30,3 +30,12 @@ server:
 spring:
   profiles:
     active: deployment
+
+
+    "roomImages": [
+      {
+        roompath :
+        order :
+      }
+
+    ],
