--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "redux": "^4.1.2",
+    "sockjs-client": "^1.6.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
