--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@stomp/stompjs": "^6.1.2",
     "axios": "^0.26.0",
-    "http-proxy-middleware": "^2.0.3",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "net": "^1.0.2",
     "next": "^12.0.10",
     "next-auth": "^4.2.1",
     "next-redux-wrapper": "^7.0.5",
@@ -22,6 +21,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "redux": "^4.1.2",
+    "sockjs-client": "^1.6.0",
+    "stompjs": "^2.3.3",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
