Chore: 개발과정에서 사용한 설정 파일 원복

--- a/backend/tos-proejct/src/main/resources/application.yml
+++ b/backend/tos-proejct/src/main/resources/application.yml
@@ -1,16 +1,9 @@
 spring:
-  h2:
-    console:
-      enabled: true
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:test;MODE=MySQL
-    username: sa
-    password:
-  #    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/together_sports_db?serverTimezone=UTC&characterEncoding=UTF-8
-#    username: root
-#    password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/together_sports_db?serverTimezone=UTC&characterEncoding=UTF-8
+    username: root
+    password: 1234
   jpa:
     open-in-view: true
     hibernate:
@@ -30,10 +23,3 @@ server:
     encoding:
       charset: UTF-8
       force: true
-
-# aws properties
-
----
-spring:
-  profiles:
-    active: deployment
