--- a/backend/tos-project/src/main/resources/application-security.yml
+++ b/backend/tos-project/src/main/resources/application-security.yml
@@ -4,27 +4,27 @@ spring:
       client:
         registration:
           kakao:
-            client-id: 5638a1ebad37df7a20b7a4e6e280ce63
-            client-secret: rq7ZOvgXE2duGZ9rTdREjG86DApPuiOn
+            client-id: 5638a1ebad37df7a20b7a4e6e280ce63 # env
+            client-secret: rq7ZOvgXE2duGZ9rTdREjG86DApPuiOn # env
             client-authentication-method: POST
             authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao # env
             scope: profile_nickname, account_email
             client-name: Kakao
 
           google:
-            client-id: 96223095074-gf26tnpoii6102hdraiqqmiff5ftpqlv.apps.googleusercontent.com
-            client-secret: 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
+            client-id: 96223095074-gf26tnpoii6102hdraiqqmiff5ftpqlv.apps.googleusercontent.com # env
+            client-secret: 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 # env
             scope:
               - profile
               - email
-              -
+
           naver:
-            client-id: LA8L8hj5X9Dn1rBjNMOa
-            client-secret: RJFDTSMbjm
+            client-id: LA8L8hj5X9Dn1rBjNMOa # env
+            client-secret: RJFDTSMbjm # env
             client-authentication-method: POST
             authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver # env
             scope: name, email
             client-name: Naver
 
@@ -43,3 +43,9 @@ spring:
 app:
   oauth2:
     authorized-redirect-uri: http://localhost:3000/oauth/saving
+
+jwt:
+  access-token-signing-key: KWJ0fT7c7yeq6cPCAcikky1U+eRiXeqkStV3ZhkMkWE=
+  refresh-token-signing-key : Hh8NL4t1ZMXqc8xkKYS3vFp9b3OvNYy3e7CWSmm5ypU=
+  access-token-expiration-time: 30 # 분단위
+  refresh-token-expiration-time: 15 # 일단위
