--- a/backend/tos-project/src/main/resources/application.yml
+++ b/backend/tos-project/src/main/resources/application.yml
@@ -1,25 +1,32 @@
+# default application setting
+# encoding properties
+server:
+  servlet:
+    encoding:
+      charset: UTF-8
+      force: true
+
+# spring properties
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/together_sports_db?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: 1234
+
   jpa:
-    open-in-view: true
     hibernate:
       ddl-auto: update
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      use-new-id-generator-mappings: false
     show-sql: true
     properties:
-      hibernate.format_sql: true
+      hibernate:
+        format_sql: true
 
   profiles:
-    include: oauth2, jwt, storage
+    include: security
 
-server:
-  servlet:
-    encoding:
-      charset: UTF-8
-      force: true
+# together sports application properties
+app:
+  storage:
+    root: /Users/chayeongho/Pictures/User
+    location: /images
