Feature : 방 업데이트 WS 전달 완료

--- a/backend/tos-project/build.gradle
+++ b/backend/tos-project/build.gradle
@@ -72,6 +72,10 @@ dependencies {
 	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	//test - lombok
+	testCompileOnly 'org.projectlombok:lombok:1.18.12'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 }
 
 
