--- a/backend/tos-project/build.gradle
+++ b/backend/tos-project/build.gradle
@@ -76,6 +76,10 @@ dependencies {
 	//test - lombok
 	testCompileOnly 'org.projectlombok:lombok:1.18.12'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+	//gson
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+
 }
 
 
