chore: 백엔드 배포용 설정 변경
- gradle 실행 시 환경변수 전달하도록 build.gradle 수정

--- a/backend/tos-project/build.gradle
+++ b/backend/tos-project/build.gradle
@@ -12,8 +12,7 @@ plugins {
 }
 
 bootRun {
-	String activeProfile = System.properties['spring.profiles.active']
-	systemProperty "spring.profiles.active", activeProfile
+	systemProperties System.properties
 }
 
 group = 'com.togethersports'
