Fix: oauth2 로그인 오류 수정
- 받아오지 못하는 필드값에 의한 nullpointer exception 해결(nickname 필드)

--- a/backend/tos-project/src/main/resources/application-aws.yml
+++ b/backend/tos-project/src/main/resources/application-aws.yml
@@ -1,4 +1,14 @@
 # aws deployment environment application setting
+
+# https setting
+server:
+  port: 8443
+  ssl:
+    key-store: /home/ubuntu/spring-ssl/keystore.p12
+    key-store-password: 123456
+    key-store-type: PKCS12
+    key-alias: ts
+
 # spring properties
 spring:
   datasource:
