--- a/backend/tos-project/src/main/resources/application-security.yml
+++ b/backend/tos-project/src/main/resources/application-security.yml
@@ -4,29 +4,26 @@ spring:
       client:
         registration:
           kakao:
-            client-id: ${KAKAO_OAUTH2_CLIEND_ID} # env
+            client-id: ${KAKAO_OAUTH2_CLIENT_ID} # env
             client-secret: ${KAKAO_OAUTH2_CLIENT_SECRET} # env
             client-authentication-method: POST
             authorization-grant-type: authorization_code
-            redirect-uri: https://together-sports.com/login/oauth2/code/kakao # env
+            redirect-uri: ${HOST}/login/oauth2/code/kakao # env
             scope: profile_nickname, account_email
             client-name: Kakao
 
           google:
             client-id: ${GOOGLE_OAUTH2_CLIENT_ID} # env
             client-secret: ${GOOGLE_OAUTH2_CLIENT_SECRET} # env
-            redirect-uri: https://together-sports.com/login/oauth2/code/google
-            scope:
-              - profile
-              - email
+            redirect-uri: ${HOST}/login/oauth2/code/google
+            scope: profile, email
 
           naver:
             client-id: ${NAVER_OAUTH2_CLIENT_ID} # env
             client-secret: ${NAVER_OAUTH2_CLIENT_SECRET} # env
             client-authentication-method: POST
             authorization-grant-type: authorization_code
-            redirect-uri: https://together-sports.com/login/oauth2/code/naver # env
-            scope: name, email
+            redirect-uri: ${HOST}/login/oauth2/code/naver # env
             client-name: Naver
 
         provider:
@@ -43,7 +40,7 @@ spring:
 
 app:
   oauth2:
-    authorized-redirect-uri: https://together-sports.com/oauth/saving
+    authorized-redirect-uri: ${HOST}/oauth/saving
 
 jwt:
   access-token-signing-key: KWJ0fT7c7yeq6cPCAcikky1U+eRiXeqkStV3ZhkMkWE=
