Feature : 테스트 작성#2

--- a/backend/tos-project/src/main/resources/application-dev.yml
+++ b/backend/tos-project/src/main/resources/application-dev.yml
@@ -1,6 +1,9 @@
 # development environment application setting
 # spring properties
 spring:
+  config:
+    activate:
+      on-profile: test
   h2:
     console:
       enabled: true
