--- a/backend/tos-project/src/main/resources/application-security.yml
+++ b/backend/tos-project/src/main/resources/application-security.yml
@@ -4,26 +4,28 @@ spring:
       client:
         registration:
           kakao:
-            client-id: ${KAKAO_OAUTH2_CLIENT_ID} # env
-            client-secret: ${KAKAO_OAUTH2_CLIENT_SECRET} # env
+            client-id: 5638a1ebad37df7a20b7a4e6e280ce63 # env
+            client-secret: rq7ZOvgXE2duGZ9rTdREjG86DApPuiOn # env
             client-authentication-method: POST
             authorization-grant-type: authorization_code
-            redirect-uri: ${HOST}/login/oauth2/code/kakao # env
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao # env
             scope: profile_nickname, account_email
             client-name: Kakao
 
           google:
-            client-id: ${GOOGLE_OAUTH2_CLIENT_ID} # env
-            client-secret: ${GOOGLE_OAUTH2_CLIENT_SECRET} # env
-            redirect-uri: ${HOST}/login/oauth2/code/google
-            scope: profile, email
+            client-id: 96223095074-gf26tnpoii6102hdraiqqmiff5ftpqlv.apps.googleusercontent.com # env
+            client-secret: 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 # env
+            scope:
+              - profile
+              - email
 
           naver:
-            client-id: ${NAVER_OAUTH2_CLIENT_ID} # env
-            client-secret: ${NAVER_OAUTH2_CLIENT_SECRET} # env
+            client-id: LA8L8hj5X9Dn1rBjNMOa # env
+            client-secret: RJFDTSMbjm # env
             client-authentication-method: POST
             authorization-grant-type: authorization_code
-            redirect-uri: ${HOST}/login/oauth2/code/naver # env
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver # env
+            scope: name, email
             client-name: Naver
 
         provider:
@@ -40,7 +42,7 @@ spring:
 
 app:
   oauth2:
-    authorized-redirect-uri: ${HOST}/oauth/saving
+    authorized-redirect-uri: http://localhost:3000/oauth/saving
 
 jwt:
   access-token-signing-key: KWJ0fT7c7yeq6cPCAcikky1U+eRiXeqkStV3ZhkMkWE=
