Feature : 방 수정 리팩토링 및 온오프라인 리팩토링

--- a/backend/tos-project/src/main/resources/application.yml
+++ b/backend/tos-project/src/main/resources/application.yml
@@ -28,5 +28,5 @@ spring:
 # together sports application properties
 app:
   storage:
-    root: /Users/chayeongho/Pictures/User
-    location: /images
+    root: /Users/chayeongho
+    location: /Desktop
