--- a/backend/tos-project/src/main/resources/application.yml
+++ b/backend/tos-project/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
@@ -29,7 +29,7 @@ spring:
 app:
   storage:
     root: /Users/chayeongho
-    location: /images
+    location: /Users/chayeongho
   user:
     default-image: /images/default_user_profile.jpeg
   room:
