Feature : 배포용 코드로 변경

--- a/backend/tos-project/src/main/resources/application-dev.yml
+++ b/backend/tos-project/src/main/resources/application-dev.yml
@@ -24,5 +24,10 @@ spring:
 # together sports application properties
 app:
   storage:
-    root: /Users/seunjeon/Workspace/images
+    root: /Users/chayeongho/images
     location: /images
+  user:
+    default-image: /images/default_user_profile.jpeg
+  room:
+    default-image:
+      etc: /imgaes/default_room_image.png
