--- a/backend/tos-project/src/main/resources/application-security.yml
+++ b/backend/tos-project/src/main/resources/application-security.yml
@@ -8,7 +8,7 @@ spring:
             client-secret: ${KAKAO_OAUTH2_CLIENT_SECRET}
             client-authentication-method: POST
             authorization-grant-type: authorization_code
-            redirect-uri: ${HOST}:${PORT}/login/oauth2/code/kakao # env
+            redirect-uri: ${HOST}/login/oauth2/code/kakao # env
             scope: profile_nickname, account_email
             client-name: Kakao
 
@@ -25,7 +25,7 @@ spring:
             client-secret: ${NAVER_OAUTH2_CLIENT_SECRET}
             client-authentication-method: POST
             authorization-grant-type: authorization_code
-            redirect-uri: ${HOST}:${PORT}/login/oauth2/code/naver # env
+            redirect-uri: ${HOST}/login/oauth2/code/naver # env
             scope: name, email
             client-name: Naver
 
@@ -43,7 +43,7 @@ spring:
 
 app:
   oauth2:
-    authorized-redirect-uri: ${HOST}:${PORT}/oauth/saving
+    authorized-redirect-uri: ${HOST}/oauth/saving
 
 jwt:
   access-token-signing-key: KWJ0fT7c7yeq6cPCAcikky1U+eRiXeqkStV3ZhkMkWE=
