feat: 파일 업로드 최대 사이즈 수정

--- a/backend/tos-project/src/main/resources/application.yml
+++ b/backend/tos-project/src/main/resources/application.yml
@@ -8,6 +8,10 @@ server:
 
 # spring properties
 spring:
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/together_sports_db?serverTimezone=UTC&characterEncoding=UTF-8
